# mbotmake

./: README.md  autoformat.sh  mbotmake  pyproject.toml
.github/workflows/: compile-to-one-file.yml  python-package.yml
mbotmake2/: __main__.py  extract_thumbnails.py  metafile.py  progress.py  types.py  validate.py
mbotmake2/grammars/: thumbnails.py  toolpath.py
mbotmake2/transformers/: thumbnails.py  toolpath.py
mboxmake2/: __main__.py  extract_thumbnails.py  metafile.py  types.py  validate.py
mboxmake2/grammars/: thumbnails.py  toolpath.py
mboxmake2/transformers/: thumbnails.py  toolpath.py
printerconfigs/: Makerbot_RepPlus.meta.json
tests/: test_argparse.py  test_gcode_parsing.py  test_thumbnail.py  test_toolpath_parsing.py
