[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
]

[project]
dependencies = [
    'parsimonious',
    'progressbar2',
]
name = "mboxmake2"
version = "0.0.1"

[project.optional-dependencies]
test = [
    "pytest",
    "ruff",
]

[project.urls]
Repository = "http://github.com/antonysigma/mbotmake/"

[tool.ruff]
line-length = 127
target-version = "py312"

[tool.ruff.lint]
select = [
    "C90",
    "E9",
    "E713",
    "E721",
    "F7",
    "F63",
    "F82",
]

[tool.ruff.lint.mccabe]
max-complexity = 30

[tool.setuptools]
packages = [
    "mboxmake2",
    "mboxmake2.grammars",
    "mboxmake2.transformers",
]

[tool.setuptools.package-dir]
mboxmake2 = "mboxmake2"
